my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/20020406-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020406-1.c:67:3: error: call to undeclared library function 'printf' with type 'int (const char *, ...)'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   67 |   printf("DUPFFexgcd called on degrees %d and %d\n", DUPFFdeg(f), DUPFFdeg(g));
      |   ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020406-1.c:67:3: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020406-1.c:69:45: error: call to undeclared library function 'abort' with type 'void (void) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   69 |   if (DUPFFdeg(f) != 2 || DUPFFdeg(g) != 1) abort();
      |                                             ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20020406-1.c:69:45: note: include the header <stdlib.h> or explicitly provide a declaration for 'abort'
2 errors generated.
